fix(badges): middle alignment for badges

--- a/scss/_badge.scss
+++ b/scss/_badge.scss
@@ -11,7 +11,7 @@
   line-height: 1;
   text-align: center;
   white-space: nowrap;
-  vertical-align: baseline;
+  vertical-align: middle;
   @include border-radius($badge-border-radius);
   @include transition($badge-transition);
 
